--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,7 +6,11 @@ platform :ios, '13.0'
 target 'RNAula05Navegacao' do
   config = use_native_modules!
 
-  use_react_native!(:path => config["reactNativePath"])
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # to enable hermes on iOS, change `false` to `true` and then install pods
+    :hermes_enabled => false
+  )
 
   target 'RNAula05NavegacaoTests' do
     inherit! :complete
@@ -16,18 +20,11 @@ target 'RNAula05Navegacao' do
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable these next few lines.
+  # you should disable the next line.
   use_flipper!({ 'Flipper' => '0.93.0', 'Flipper-Folly' => '2.6.7', 'Flipper-DoubleConversion' => '3.1.7' })
+
   post_install do |installer|
-    flipper_post_install(installer)
-  end
-end
-
-target 'RNAula05Navegacao-tvOS' do
-  # Pods for RNAula05Navegacao-tvOS
-
-  target 'RNAula05Navegacao-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
+    react_native_post_install(installer)
+    __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
