--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RNAula05Navegacao",
+  "name": "rnaula05navegacao",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,25 +8,32 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "launch-ios": "npm run ios -- --simulator=\"iPhone SE (3rd generation)\""
+    "launch-ios": "npm run ios -- --simulator=\"iPhone SE (3rd generation)\"",
+    "rn-run-ios": "react-native run-ios --simulator=\"iPhone SE (3rd generation)\""
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "react": "16.13.1",
-    "react-native": "0.63.5"
+    "@react-navigation/stack": "^6.3.20",
+    "react": "17.0.2",
+    "react-native": "0.66.5",
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-reanimated": "^2.3.0",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^1.1.0",
-    "babel-jest": "^25.1.0",
-    "eslint": "^6.5.1",
-    "jest": "^25.1.0",
-    "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.13.1"
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "7.14.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.66.2",
+    "react-test-renderer": "17.0.2"
   },
   "jest": {
     "preset": "react-native"
